# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "micropython-dfplayer"
version = "1.0.5"
description = "Library to use the DFPlayer mini mp3 player module with micropython"
readme = "README.md"
authors = [{ name = "redoxcode", email = "redoxcode@github.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: Implementation :: MicroPython"
]
keywords = ["dfmini","dfplayer", "mp3"]
dependencies = []

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/redoxcode/micropython-dfplayer"


